# ssm-env

./: Cargo.toml  Changes.md  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
